Working on the Features section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://kit.fontawesome.com/3b9f21bd07.js"></script>
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -33,6 +34,49 @@
                 <input type="submit" name="submit" class="btn" id="submit" value="Get Started" />
             </form>
         </section>
+
+        <div class="container">
+            <section id="features">
+                <div class="grid">
+                    <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+                    <div class="desc">
+                        <h2>Premium Material</h2>
+                        <p>
+                            Consectetur sunt commodo mollit nulla voluptate elit cillum commodo elit labore labore eu ea
+                            ad. Enim amet anim sit cupidatat commodo nostrud aute aliquip ut commodo. Sit proident
+                            dolore minim dolore reprehenderit quis ipsum consectetur nostrud. Consequat ad tempor duis
+                            aliquip exercitation Lorem ut esse consequat amet.
+                        </p>
+                    </div>
+                </div>
+                <div class="grid">
+                    <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+                    <div class="desc">
+                        <h2>Fast Shipping</h2>
+                        <p>Non quis voluptate irure incididunt ipsum cillum ad ullamco. Cillum laboris sunt
+                            nulla non cillum sit ex eiusmod anim labore aliquip duis veniam minim. Veniam consequat
+                            nulla
+                            tempor consectetur commodo qui ipsum cillum magna nulla. Dolor proident ipsum mollit minim
+                            commodo. Nulla mollit culpa cillum aute ullamco amet fugiat enim reprehenderit enim duis
+                            laborum. Ullamco et aute laborum magna ullamco ad.</p>
+                    </div>
+                </div>
+                <div class="grid">
+                    <div class="icon"><i class="fa fa-3x fa-battery-full"></i></div>
+                    <div class="desc">
+                        <h2>
+                            Quality Assurance
+                        </h2>
+                        <p>Laborum aliqua qui reprehenderit veniam velit Lorem quis in non in qui officia. Do
+                            ex incididunt commodo sint elit. Excepteur ex voluptate esse cupidatat sint esse esse. Amet
+                            culpa ad et minim commodo. Excepteur id irure quis ea aute qui duis sunt esse fugiat aute
+                            deserunt minim ea. Esse esse esse ex aute est qui. Occaecat commodo ut consequat occaecat ex
+                            irure ipsum enim nostrud eu ullamco magna.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 
