how it works section with the iFrame

--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
                     </div>
                 </div>
             </section>
+            <section id="how-it-works">
+                <iframe src="https://www.youtube.com/watch?v=CBm7Ata6Q_Q" frameborder="0" id="video" height="315"
+                    allowfullscreen></iframe>
+            </section>
         </div>
     </div>
 </body>
