finished product sections with some fancy colors

--- a/index.html
+++ b/index.html
@@ -77,8 +77,47 @@
                 </div>
             </section>
             <section id="how-it-works">
-                <iframe src="https://www.youtube.com/watch?v=CBm7Ata6Q_Q" frameborder="0" id="video" height="315"
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/CBm7Ata6Q_Q" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
+            </section>
+
+
+            <section id="pricing">
+                <div class="product" id="tenor">
+                    <div class="level">Tenor Trombone</div>
+                    <h2>$600</h2>
+                    <ol>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                    </ol>
+                    <button class="btn"> Select</button>
+                </div>
+                <div class="product" id="bass">
+                    <div class="level">Bass Trombone</div>
+                    <h2>$900
+                    </h2>
+                    <ol>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                    </ol>
+                    <button class="btn">Select</button>
+                </div>
+                <div class="product" id="valve">
+                    <div class="level">Valve Trombone</div>
+                    <h2>$1200</h2>
+                    <ol>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                        <li>Lorem ipsum</li>
+                    </ol>
+                    <button class="btn">Select</button>
+                </div>
             </section>
         </div>
     </div>
